extends Control

@onready var weaponDisplay = $WeaponDisplay
@onready var weaponDisplayTexture = $WeaponDisplay/WepText
@onready var weaponDisplayName = $WeaponDisplay/WeaponName
@onready var healthStatus = $Status
@onready var hpBar = $Status/HpBar

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
